--- a/style.css
+++ b/style.css
@@ -1,51 +1,68 @@
 *{
   margin: 0;
-  paddingg: 0;
+  padding: 0;
 }
 
 .container{
-  
+  width: 100%;
+  display: inline-block;
+
   padding: 40px;
   background-color: black;
 }
+.logo{
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  width: 300px;
+  height: 100px;
+  margin-bottom: 70px;
+  background-color: red;
+}
 
 .logo h1{
-  margin-left: 50px;
+  
+  
+  margin-left: 20px;
   text-align: center;
   color: white;
-  font-size: 50px;
+  width: 300px;
+  font-size: 70px;
   position: absolute;
-  
+  font-weight: 300;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   
   
 }
 
 .menu a{
-  float: right;
+  
   text-align: center;
   background-color: white;
-  margin-bottom: 30px;
+  margin-bottom: 100px;
   width: 80px;
   height: 25px;
-  margin: 5px;
-  margin-right: 30px;
+  
+
   text-decoration: none;
   font-size: 20px;
   color: black;
-  justify-content: center;
-  
-  
-  
 }
 
 .menu{
   
-  
-  margin-bottom: 50px;
-  
-  
-  
+  margin-right: 70px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  float: right;
+  width: 200px;
+  height: 200px;
+  background-color: red;
 }
+
+
 
 .imagem{
   margin-left: 42%;
