--- a/style.css
+++ b/style.css
@@ -1,95 +1,122 @@
-*{
-  margin: 0;
+*, *::before, *::after{
   padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body{
+  overflow-x: hidden;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: wheat;
+}
+
+
+::selection{
+  background-color: white;
+  color: brown;
+}
+
+a{
+  text-decoration: none;
+}
+
+ul{
+  list-style: none;
+}
+
+header{
+  width: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 10;
+  
+  transition: 0.3s;
 }
 
 .container{
+  position: relative;
   width: 100%;
-  display: inline-block;
-
-  padding: 40px;
-  background-color: black;
+  max-width: 75rem;
+  padding: 0 1.5rem;
+  margin: 0 auto;
 }
+
+nav.container{
+  
+
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 .logo{
-  text-align: center;
+  
+  
+  margin-right: 1.5rem;
+  height: 120px;
+  line-height: 120px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 4rem;
+  color: black;
+  letter-spacing: 1px;
+  transition: 0.3s;
+}
+
+.links{
+  margin-bottom: 60px;
+  margin-left: 50%;
+  
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+.links ul{
+  
   justify-content: center;
   display: flex;
   align-items: center;
-  width: 300px;
-  height: 100px;
-  margin-bottom: 70px;
-  background-color: red;
+  width: 100%;
 }
 
-.logo h1{
+.nav-links{
   
-  
-  margin-left: 20px;
-  text-align: center;
-  color: white;
-  width: 300px;
-  font-size: 70px;
-  position: absolute;
-  font-weight: 300;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  
-  
-}
-
-.menu a{
-  
-  text-align: center;
-  background-color: white;
-  margin-bottom: 100px;
-  width: 80px;
-  height: 25px;
-  
-
-  text-decoration: none;
+  text-transform: uppercase;
   font-size: 20px;
   color: black;
+  letter-spacing: 0.5px;
+  display: inline-block;
+  margin: 0 1rem;
 }
 
-.menu{
-  
-  margin-right: 70px;
-  justify-content: center;
+.toggle-btn{
+  color: red;
+  min-width: 40px;
+  height: 40px;
+  background-color: bisque;
+  border-radius: 50%;
+  display: flex;
   align-items: center;
-  display: flex;
-  float: right;
-  width: 200px;
-  height: 200px;
-  background-color: red;
+  justify-content: center;
+  font-size: 1.1rem;
+  cursor: pointer;
+  box-shadow: 0 0 10px;
+  transition: 0.3s;
 }
 
-
-
-.imagem{
-  margin-left: 42%;
-  margin-top: 100px;
-  display: flex;
-  justify-content: center;
-  width: 290px;
-  height: 290px;
-  background-color: black;
+.toggle-btn:hover{
+  filter: brightness(100%);
 }
 
-.imagem2{
-  margin-left: 42%;
-  margin-top: 100px;
-  display: flex;
-  justify-content: center;
-  width: 290px;
-  height: 290px;
-  background-color: black;
+header.scrolled{
+  background-color: blanchedalmond;
+  box-shadow: 0 5px 20px 0.1px rgba(0, 0, 0, 0.1);
 }
 
-.imagem3{
-  margin-left: 42%;
-  margin-top: 100px;
-  display: flex;
-  justify-content: center;
-  width: 290px;
-  height: 290px;
-  background-color: black;
+header.scrolled .logo{
+  margin-top: 30px;
+  height: 80px;
+  line-height: 80px;
 }
