--- a/style.css
+++ b/style.css
@@ -10,6 +10,25 @@ body{
   background-color: wheat;
 }
 
+.imagem-logo{
+  
+  width: 300px;
+  height: 200px;
+  margin: auto;
+}
+
+.imagem-logo img{
+  padding-bottom: 80px;
+  width: 450px;
+  margin: auto;
+ 
+  height: 330px;
+}
+
+
+
+
+
 
 ::selection{
   background-color: white;
@@ -62,11 +81,9 @@ nav.container{
 }
 
 .links{
-  margin-bottom: 60px;
-  margin-left: 50%;
-  
+  margin: auto;
   flex: 1;
-  display: flex;
+
   justify-content: space-between;
   
 }
@@ -87,6 +104,10 @@ nav.container{
   letter-spacing: 0.5px;
   display: inline-block;
   margin: 0 1rem;
+}
+
+.nav-links:hover{
+  color: white;
 }
 
 .toggle-btn{
@@ -118,3 +139,273 @@ header.scrolled .logo{
   height: 80px;
   line-height: 80px;
 }
+
+.inicio{
+ 
+  
+  margin: auto;
+ 
+  
+  background-color: wheat;
+  height: 100vh;
+    
+}
+
+.cards{
+    height: 500px;
+    padding: 20px;
+    margin: auto;
+
+   
+  
+
+    
+}
+
+.inicio, .cards{
+    
+    margin: auto;
+   
+    display: flex;
+    max-width: 1300px;
+    min-width: 250px;
+}
+
+
+.texto{
+   
+    width: 600px;
+    min-width: 250px;
+    
+   
+    
+}
+
+.texto h2{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-transform: uppercase;
+    margin-top: 20px;
+    font-size: 13px;
+}
+
+.texto, .imagem-inicio{
+    margin: auto;
+    max-width: 550px;
+    max-height: 500px;
+    text-align: center;
+    margin-right: 25px;
+}
+
+
+
+.imagem-inicio{
+    width: 600px;
+    min-width: 250px;
+    
+}
+
+@media (max-width: 768px){
+    .inicio, .cards{
+        font-size: 20%;
+        flex-direction: column;
+        text-align: center;
+    }
+    .html{
+        font-size: 20px;
+    }
+  
+   
+    .imagem-inicio img{
+  
+      max-width: 480px;
+      height: 400px;
+     
+      margin: auto;
+    }
+}
+
+
+
+@media (max-width: 540px){
+    nav{
+        display: none;
+    }
+
+    .menu-toggle{
+        width: 40px;
+        height: 30px;
+        margin-right: 20px;
+    }
+
+    .one,
+    .two,
+    .three{
+        background-color: white;
+        height: 5px;
+        width: 100%;
+        margin: 6px auto;
+    }
+
+    
+}
+
+@media (max-width: 450px){
+    .texto h2{
+      font-size: 12px;
+    }
+    .texto, .imagem-inicio{
+      
+      margin: auto;
+      max-width: 350px;
+    }
+
+    .imagem-inicio img{
+      max-width: 350px;
+    }
+
+    .inicio{
+      
+      height: 1100px;
+      
+     
+    }
+
+    .container{
+      max-width: 350px;
+      min-width: 250px;
+    }
+
+    .links{
+      max-width: 250px;
+      
+     
+    }
+
+    .links a{
+      font-size: 14px;
+    }
+
+    .imagem-logo img{
+      margin: auto;
+     
+      max-width: 300px;
+    }
+
+    
+    
+  
+ 
+}
+
+
+.container2{
+    background-color: wheat;
+    margin: auto;
+    max-width: 1300px;
+   
+}
+
+.row{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 15px;
+    text-align: center;
+    
+}
+
+.card-03 h1, .card-02 h1, .card-01 h1{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-top: 35px;
+    text-transform: uppercase;
+}
+
+.card-01{
+    background-color: beige;
+    position: relative;
+    flex: 1;
+    max-width: 300px;
+    height: 150px;
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.card-02{
+    background-color: aquamarine;
+    position: relative;
+    flex: 1;
+    max-width: 460px;
+    height: 200px;
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.card-03{
+    background-color: rgb(90, 226, 181);
+    position: relative;
+    flex: 1;
+    max-width: 940px;
+    height: 300px;
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 800px){
+    .card-01{
+        flex: 100%;
+      
+        max-width: 600px;
+    }
+    .card-02{
+        flex: 100%;
+        max-width: 600px;
+    }
+    .card-03{
+        flex: 100%;
+        max-width: 600px;
+    }
+
+}
+
+.roupas{
+  background-color: red;
+  width: 100%;
+  height: 100vh;
+}
+
+.roupas-box{
+  background-color: yellow;
+  
+  margin: auto;
+  width: 900px;
+  height: 100vh;
+}
+
+.roupa1{
+  width: 300px;
+
+  height: 300px;
+  background-color: blue;
+  margin: auto;
+}
+
+.roupa2{
+  width: 300px;
+  margin-top: 20px;
+  height: 300px;
+  background-color: black;
+  margin-left: 300px;
+}
+
+.roupa3{
+  width: 300px;
+  margin-top: 20px;
+  height: 300px;
+  background-color: grey;
+  margin-left: 300px;
+}
+
